--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="card">
 
       <div class="card_images">
-        <img src="images/illustration-woman-online-desktop.svg">
+        <div id="image1"><img src="images/illustration-box-desktop.svg"></div>
+        <div id="image2"><img src="images/illustration-woman-online-desktop.svg"></div>
+        
       </div>
 
       <div class="card_list">
