design improved for desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
   <title>Frontend Mentor | FAQ Accordion Card</title>
-  <script type="text/javascript" src="main.js"></script>
+  <!-- <script type="text/javascript" src="main.js"></script> -->
 </head>
 <body>
 
@@ -23,13 +23,14 @@
 
       <div class="card_list">
 
-        <h1>FAQ</h1>
+        <div><h1>FAQ</h1></div>
 
         <div class="faq-container">
           <!-- QUESTION 1-->
           <div class="question-container">
-            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
+            
             <div class="question">How many team members can I invite?</div>
+            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="answer">
               <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
                 team members for the Premium plan.</p>
@@ -38,8 +39,8 @@
 
           <!-- QUESTION 2-->
           <div class="question-container">
-            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="question">What is the maximum file upload size?</div>
+            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="answer">
               <p>No more than 2GB. All files in your account must fit your allotted storage space.
               </p>
@@ -49,9 +50,9 @@
 
           <!-- QUESTION 3-->
           <div class="question-container">
-            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="question">How do I reset my password?</div>
-            <div class="answer">
+            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
+            <div class="answer active">
               <p>Click “Forgot password” from the login page or “Change password” from your profile page.
                 A reset link will be emailed to you.</p>
             </div>
@@ -60,10 +61,10 @@
 
           <!-- QUESTION 4-->
           <div class="question-container">
-            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="question">Can I cancel my subscription?</div>
+            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="answer">
-              <p>Yes! Send us a message and we’ll process your request no questions asked.
+              <p>Yes! Send us a message and we’ll process your request no questions asked. fkvfdlkvflkvnlndflfld
               </p>
             </div>
           </div>
@@ -71,8 +72,8 @@
 
           <!-- QUESTION 5-->
           <div class="question-container">
-            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="question">Do you provide additional support?</div>
+            <div class="question-icon"><img src="images/icon-arrow-down.svg" alt=""></div>
             <div class="answer">
               <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.
               </p>
@@ -86,7 +87,7 @@
   
   <div class="footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="www.nicolashodee.com">Nicolas HODEE</a>.
   </div>
 </body>
 </html>
