responsive design improved

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="card_holder">
     
     <div class="card">
+      
       <div id="image1"><img src="images/illustration-box-desktop.svg"></div>
       <div class="card_images">
         <div id="image2"><img src="images/illustration-woman-online-desktop.svg"></div>
       </div>
-
       <div class="card_list">
 
-        <div><h1>FAQ</h1></div>
+        <div id="faq-title"><h1>FAQ</h1></div>
 
         <div class="faq-container">
           <!-- QUESTION 1-->
