jworking on the javascript

--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  
-  
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
   <title>Frontend Mentor | FAQ Accordion Card</title>
-  <!-- <script type="text/javascript" src="main.js"></script> -->
+  <script type="text/javascript" src="main.js" defer></script>
 </head>
 <body>
 
